<resources>
    <string name="app_name">Awaam</string>
    <string name="instructions">Place your fingertip on the Home button to verify your identity</string>
    <string name="awaamTitle">A w a a m</string>
    <string name="emailid">Email id</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="setUpPin">Set Up New PIN \n Please Enter your PIN</string>
    <string name="fingerprint">Authenticate With Fingerprint </string>
    <string name="oldPin">Please Enter your PIN</string>
    <string name="submit">SUBMIT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="electionStart">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="organistaion">Select the organistation</string>
    <string name="open">Open</string>
    <string name="close">Close</string>



</resources>
