<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/login_banner"></ImageView>

        <ImageView
            android:id="@+id/bgCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:background="@drawable/card"
            android:elevation="2dp"></ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="220dp"
            android:elevation="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/emailid"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_id"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_bg"
                android:hint="Enter the email id"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:singleLine="true"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/password"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_bg"
                android:hint="Enter the Password"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:singleLine="true"
                android:textAlignment="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/organistaion"
                android:textColor="@color/textColor"
                android:textStyle="bold" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnner"
                ></Spinner>
d

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:elevation="4dp"
            android:layout_marginTop="580dp"

            >

            <TextView
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_alignParentTop="true"
                android:background="@drawable/round_button"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@drawable/round_button"
                android:gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>